<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ServiceTestActivity!</string>
    <string name="app_name">MyTestApp</string>
    <string name="button1">Test</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="textView1">TextView1</string>
    <string name="textView2">10010TextView223345234234234hahahahahahahahahhahahahhhatexttexttext</string>
    <string name="textView3">TextView3</string>
    <string name="checkbox">CheckBox</string>
    <string name="systeminfo">SystemInfo</string>
    <string name="filetest">FileTest</string>
    <string name="filebrowser">FileBrowser</string>
    
</resources>